--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,8 @@
   <app-root></app-root>
   <script src="https://accounts.google.com/gsi/client" async></script>
   <script src="https://smtpjs.com/v3/smtp.js"></script>
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+
 </body>
 
 </html>
